# gazebo-simple

./: CMakeLists.txt
model/Building/: model.sdf
model/HumanoidRobot/model/: model.sdf
script/: message.cpp
world/: flat
